[T256] integrated operational modals in settings

--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/main/template/customer-register.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/main/template/customer-register.html
@@ -17,6 +17,7 @@
 <div [ngClass]="{'col-xs-3 overview-right': !isEditing, 'col-xs-9 edit-container': isEditing}">
 	<customer-register-overview 
 		*ngIf="selectedCustomerVM && !isEditing" 
+		[showLinkToOperationalModal]="showLinkToOperationalModal"
 		[customerVM]="selectedCustomerVM"
 		(onEdit)="editCustomer($event)">
 		>
