--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
@@ -3,7 +3,14 @@
 		<kbd>{{ 'Selected' | translate }}</kbd>
 	</div>
 	<div>
-		<h1>{{customerVM.customerNameString}}</h1>
+		<h1 *ngIf="!showLinkToOperationalModal">
+            {{customerVM.customerNameString}}
+        </h1>
+        <h1 *ngIf="showLinkToOperationalModal">
+            <a (click)="openCustomerOperationsModal()">
+                {{customerVM.customerNameString}}
+            </a>
+        </h1>
 	</div>
 	<div>
 		<i class="fa fa-briefcase"></i> <small>{{customerVM.customer.priceProductDetails.bookingCode}}</small>
