--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/customer-register/template/settings-customer-register.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/customer-register/template/settings-customer-register.html
@@ -1,3 +1,3 @@
 <div class="card">
-	<customer-register (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></customer-register>
+	<customer-register [showLinkToOperationalModal]="true" (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></customer-register>
 </div>
