--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/rooms/template/settings-rooms.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/rooms/template/settings-rooms.html
@@ -1,3 +1,3 @@
 <div class="card">
-	<rooms (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></rooms>
+	<rooms [showLinkToOperationalModal]="true" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></rooms>
 </div>
