[T238] AddOn Product modal: select only AOP & added breakfast category

--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/modal/template/add-on-products-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/modal/template/add-on-products-modal.html
@@ -1,12 +1,12 @@
 <div class="modal-header text-center">
 	<button type="button" class="close" (click)="closeDialog()">&times;</button>
-	<h4 class="modal-title">{{ 'Select Add-On Product' | translate }}</h4>
+	<h4 class="modal-title">{{ pageTitle | translate }}</h4>
 </div>
 <div class="modal-body table-selection">
-	<lazy-loading-table (onMultiSelect)="didSelectAddOnProductList($event)"></lazy-loading-table>
+	<lazy-loading-table (onMultiSelect)="didSelectAddOnProductList($event)" (onSelect)="didSelectAddOnProduct($event)"></lazy-loading-table>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-primary" [disabled]="!didSelectAddOnProduct()" (click)="triggerSelectedAddOnProduct()">
+	<button type="button" class="btn btn-primary" [disabled]="!didSelectAtLeastOneAddOnProduct()" (click)="triggerSelectedAddOnProduct()">
 		{{ 'Select' | translate }}
 	</button>
 </div>
