[T238] added included AOP on booking operations

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-viewer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-viewer.html
@@ -19,8 +19,11 @@
     </div>
 </div>
 
-<div class="col-xs-12 col-sm-offset-1 col-sm-11 field-value text-field padding-top-5px">
+<div class="col-xs-12 col-sm-offset-1 col-sm-4 field-value text-field padding-top-5px">
     <p class="notes"><i class="fa unitpal-font" title="{{ 'Room Category' | translate }}">@</i> {{ roomCategoryName }}</p>
+</div>
+<div class="col-xs-12 col-sm-6 field-value text-field padding-top-5px">
+    <p class="notes"><i class="fa unitpal-font" title="{{ 'Included in the price' | translate }}">$</i> {{ includedString }} </p>
 </div>
 
 <div class="col-xs-12 col-sm-offset-1 col-sm-11 field-value text-field">
