[T238] Reserve add on products on booking

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -68,6 +68,10 @@
 		</div>
 		<hr/>
 		<div class="row">
+			<booking-reserve-add-on-product [bookingOperationsPageData]="bookingOperationsPageData" (onAddOnProductsChanged)="didChangeBooking($event)"></booking-reserve-add-on-product>
+		</div>
+		<hr/>
+		<div class="row">
 			<booking-reactivate [bookingOperationsPageData]="bookingOperationsPageData" (onBookingReactivate)="didChangeBooking($event)"></booking-reactivate>
 		</div>
 		<div class="row">
