[T238] finished reserve aop on booking operations (FE)

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -80,7 +80,7 @@
 		<div class="row">
 			<booking-send-confirmation [bookingOperationsPageData]="bookingOperationsPageData"></booking-send-confirmation>
 		</div>
-		<div class="row">
+		<div class="row padding-bottom-10px">
 			<booking-links [bookingOperationsPageData]="bookingOperationsPageData"></booking-links>
 		</div>
 	</div>
