--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/reserve-add-on-product/template/booking-reserve-add-on-product.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/reserve-add-on-product/template/booking-reserve-add-on-product.html
@@ -1,7 +1,7 @@
-<div class="col-xs-12 col-sm-12" *ngIf="hasAddOnProductEditRight">
+<div class="col-xs-12 col-sm-12 padding-top-5px" *ngIf="hasAddOnProductEditRight">
     <edit-save-button-group
         [pullRight]="true"
-        [changeText]="'Reserve'"
+        [changeText]="changeBtnLabel"
         (onEditStart)="startEdit()"
         (onEditEnd)="endEdit()"
         (onSavePressed)="saveAddOnProducts()"
@@ -13,13 +13,14 @@
 <div class="col-xs-12 booking-details-table">
     <table class="table form-group bottom-margin">
         <tbody>
-            <tr *ngFor="let addOnProduct of addOnProductList" class="operational-box">
+            <tr *ngFor="let addOnProductItemVM of addOnProductItemVMList" class="operational-box">
                 <td width="10%"> <i class="fa unitpal-font">$</i>  </td>
-                <td width="70%" class="name-field">
-                    {{ addOnProduct.name }}
+                <td width="70%" class="name-field f-s-14">
+                    {{addOnProductItemVM.noAdded}} x {{ addOnProductItemVM.addOnProduct.name }}
+                    <small> - {{addOnProductItemVM.totalPriceString}} </small>
                 </td>
                 <td width="20%"> 
-                    <span class="unitpal-font clickable-item" *ngIf="!readonly">\</span>
+                    <span class="unitpal-font clickable-item" *ngIf="!readonly" (click)="removeAddOnProduct(addOnProductItemVM.addOnProduct)">\</span>
                 </td>
             </tr>
             <tr *ngIf="addOnProductListIsEmpty">
@@ -34,8 +35,8 @@
 <div class="col-xs-12" *ngIf="!readonly">
     <a class="link-with-unitpal-font-icon" (click)="addAddOnProducts()">
         <i class="fa unitpal-font">'</i> 
-        <span>{{ 'Reserve Add-On-Product' | translate }}</span>
+        <span>{{ 'Add Add-On-Product' | translate }}</span>
     </a>
     <br/>
-    <small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'These will be generated as a separate item on the invoice' | translate }}</small>
+    <small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'These will be generated as separate items on the invoice' | translate }}</small>
 </div>
