--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/reserve-add-on-product/template/booking-reserve-add-on-product.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/reserve-add-on-product/template/booking-reserve-add-on-product.html
@@ -38,5 +38,5 @@
         <span>{{ 'Add Add-On-Product' | translate }}</span>
     </a>
     <br/>
-    <small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'These will be generated as separate items on the invoice' | translate }}</small>
+    <small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'These will be generated as separate items on the invoice during Check In' | translate }}</small>
 </div>
