[T258] Yield Manager - first iteration

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/template/hotel-operations-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/template/hotel-operations-dashboard.html
@@ -1,5 +1,5 @@
 <div class="row full-height">
-	<div class="hotel-operations-dashboard">
+	<div class="hotel-operations-dashboard operations-dashboard">
 		<arrivals-pane [hotelOperationsDashboard]="self" class="pane full-height"></arrivals-pane>
 		<rooms-canvas [hotelOperationsDashboard]="self" ></rooms-canvas>
 		<departures-pane [hotelOperationsDashboard]="self" class="pane full-height"></departures-pane>
