--- a/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
@@ -29,11 +29,11 @@
 					(click)="!yieldFilterValueVM.isEditing && selectedFilter(yieldFilterValueVM)">
 					<div class="row">
 						<div class="col-xs-2">
-							<div class="color-box" [ngClass]="yieldFilterValueVM.colorMeta.colorCodeStr"></div>
+							<div class="color-box" [ngClass]="yieldFilterValueVM.colorMeta.cssClass"></div>
 						</div>
 						<div class="col-xs-6">
 							<select class="form-control" *ngIf="yieldFilterValueVM.isEditing" [ngModel]="yieldFilterValueVM.filterValue.colorCode" (ngModelChange)="didChangeColorCodeFor(yieldFilterValueVM, $event)">
-								<option *ngFor="let colorMeta of colorFilter.colorMetaList" [value]="colorMeta.colorCodeStr">{{ colorMeta.displayName | translate }}</option>
+								<option *ngFor="let colorMeta of colorFilter.colorMetaList" [value]="colorMeta.cssClass">{{ colorMeta.displayName | translate }}</option>
 							</select>
 						</div>
 						<div class="col-xs-4">
