added rollaway beds warning on room card item

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
@@ -12,6 +12,9 @@
 				<div *ngIf="maintenance" class="clickable f-18" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
 					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
+				<div *ngIf="needsRollawayBeds" class="clickable f-18 orange-color" (click)="openRoomModal()" title="{{'You need some rollaway beds to fit all the people from this booking' | translate}}">
+					<span class="unitpal-font">A</span>
+				</div>
 			</div>
 		</div>
 	</div>
