--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
@@ -9,10 +9,10 @@
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name ellipsis-text clickable" (click)="openCustomerModal()" title="{{ roomVM.customerName }}">{{ roomVM.customerName }}</div>
 			<div class="room-stats flex-row flex-center-v">
-				<div *ngIf="maintenance" class="clickable f-18" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+				<div *ngIf="maintenance" class="clickable f-18 info-icon" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
 					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
-				<div *ngIf="needsRollawayBeds" class="clickable f-18 orange-color" (click)="openRoomModal()" title="{{'You need some rollaway beds to fit all the people from this booking' | translate}}">
+				<div *ngIf="needsRollawayBeds" class="clickable f-18 orange-color info-icon" (click)="openRoomModal()" title="{{'You need some rollaway beds to fit all the people from this booking' | translate}}">
 					<span class="unitpal-font">A</span>
 				</div>
 			</div>
