css changes: make the checkin/checkout colors more uniform

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
@@ -33,7 +33,7 @@
 			<div class="col-xs-12 col-sm-12">
 				<div class="row">
 					<div class="col-xs-12 padding-top-5px">
-						<button type="button" class="btn btn-primary btn-block oneline-text" (click)="createInvoice()"> 
+						<button type="button" class="btn btn-danger btn-block oneline-text" (click)="createInvoice()"> 
 							<i class="fa unitpal-font">L</i> 
 							{{ 'Create Invoice' | translate }}
 						</button>
