--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasRoom">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-danger btn-block oneline-text" (click)="viewRoom()"> 
+            <button type="button" class="btn btn-primary btn-block oneline-text" (click)="viewRoom()"> 
                 <i class="fa unitpal-font">@</i> 
                 {{ 'View' | translate }}
                 <small>
@@ -14,7 +14,7 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasInvoice">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-primary btn-block oneline-text" (click)="viewInvoice()"> 
+            <button type="button" class="btn btn-danger btn-block oneline-text" (click)="viewInvoice()"> 
                 <i class="fa unitpal-font">L</i> 
                 {{ 'Invoice' | translate }}
                 <small class="uppercase" *ngIf="invoiceIsPaid">
