--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/template/rooms-canvas.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/template/rooms-canvas.html
@@ -11,6 +11,7 @@
 				<option value="{{ enums.FilterValueType.Occupied }}">{{'Occupied Rooms' | translate }}</option>
 				<option value="{{ enums.FilterValueType.Reserved }}">{{'Reserved Rooms' | translate }}</option>
 				<option value="{{ enums.FilterValueType.OutOfService }}">{{'Out of Service Rooms' | translate }}</option>
+				<option value="{{ enums.FilterValueType.OutOfOrder }}">{{'Out of Order Rooms' | translate }}</option>
 			</select>
 		</div>
 	</div>
