added extra validations on operations modals for room status

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/template/room-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/template/room-operations-page.html
@@ -6,7 +6,10 @@
 			<room-preview [roomPreviewInput]="roomPreviewInput"></room-preview>
 		</div>
 		<div class="row">
-			<room-maintenance-status-editor [roomVM]="roomVM" (onMaintenanceStatusChanged)="didChangeRoom($event)"></room-maintenance-status-editor>
+			<room-maintenance-status-editor 
+				[hasCheckedInBooking]="hasCheckedInBooking"
+				[roomVM]="roomVM" 
+				(onMaintenanceStatusChanged)="didChangeRoom($event)"></room-maintenance-status-editor>
 		</div>
 		<hr/>
 		<div class="row padding-bottom-10px">
